// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput connect should render 1`] = `
<styled.div
  space={false}
>
  <styled.div>
    <Styled(FontAwesomeIcon) />
    <styled.input
      aria-label="Placeholder"
      autoFocus={true}
      defaultValue="Test"
      onChange={[Function]}
      placeholder="Placeholder"
    />
  </styled.div>
</styled.div>
`;

exports[`SearchInput should render 1`] = `
<styled.div
  space={false}
>
  <styled.div>
    <Styled(FontAwesomeIcon) />
    <styled.input
      aria-label="Placeholder"
      autoFocus={true}
      defaultValue="Test"
      onChange={[Function]}
      placeholder="Placeholder"
    />
  </styled.div>
</styled.div>
`;

exports[`SearchInput should render and space search 1`] = `
<styled.div
  space={true}
>
  <styled.div>
    <Styled(FontAwesomeIcon) />
    <styled.input
      aria-label="Placeholder"
      autoFocus={true}
      defaultValue="Test"
      onChange={[Function]}
      placeholder="Placeholder"
    />
  </styled.div>
</styled.div>
`;
